# OutstaffingBot

./: .editorconfig  .env.example  .env.server.example  .gitignore  README.md  RELEASE_NOTES.txt  docker-compose.staging.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_includes_lunch.py  002_phase_9_10.py  003_moderation_violations.py  003_phase_9_10.py  004_audit_log.py  (+7 more)
backend/app/: __init__.py  main.py
backend/tests/: test_admin_api.py  test_admin_basic.py  test_admin_groups.py  test_admin_moderation.py  test_admin_service.py  test_application_complaints_model.py  test_application_contacts.py  test_application_group_posts_enqueue.py  test_application_service.py  test_application_status_labels.py  test_applications_api.py  test_complaint_service.py  test_complaints_api.py  test_content_moderation.py  test_employer_api.py  test_employer_application_service.py  test_employer_applications_api.py  test_geo_service.py  test_group_posting_headcount.py  test_group_posting_service.py  test_health.py  test_init_data.py  test_job_deep_link.py  test_job_enqueue.py  test_job_request_fsm.py  test_job_request_status_labels.py  test_job_service_ban.py  test_matching_service.py  test_me_admin.py  test_mini_app_urls.py  test_moderation_violations.py  test_notification_service.py  test_push_matching.py  test_review_service.py  test_staging_500_regressions.py  test_startup_announcement.py  test_vacopen_callback.py  test_webhook.py  test_worker_api.py  test_worker_preferences_api.py  (+3 more)
(+165 files in other folders)
